--- a/ArjunaCore/arjuna/services/pom.xml
+++ b/ArjunaCore/arjuna/services/pom.xml
@@ -20,8 +20,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>arjunacore-services</artifactId>
-  <name>ArjunaCore arjuna services module</name>
-  <description>arjuna services</description>
+  <name>Narayana: ArjunaCore arjuna services</name>
+  <description>Narayana: ArjunaCore arjuna services</description>
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>${sourceDirACS}</sourceDirectory>
