--- a/ArjunaCore/txoj/pom.xml
+++ b/ArjunaCore/txoj/pom.xml
@@ -20,7 +20,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>txoj</artifactId>
-  <name>txoj</name>
+  <name>Narayana: ArjunaCore txoj</name>
   <description>ArjunaCore txoj module</description>
   <packaging>jar</packaging>
   <build>
