--- a/ArjunaJTA/cdi/pom.xml
+++ b/ArjunaJTA/cdi/pom.xml
@@ -20,8 +20,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cdi</artifactId>
-  <name>JBossJTA jta CDI  module</name>
-  <description>cdi</description>
+  <name>Narayana: ArjunaJTA cdi</name>
+  <description>Narayana: ArjunaJTA cdi</description>
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>classes</sourceDirectory>
