--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -20,7 +20,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jdbc</artifactId>
-  <name>JBossJTA jdbc module</name>
+  <name>Narayana: ArjunaJTA jdbc</name>
   <description>transactional driver</description>
   <packaging>jar</packaging>
   <build>
