--- a/ArjunaJTA/jta/pom.xml
+++ b/ArjunaJTA/jta/pom.xml
@@ -20,8 +20,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jta</artifactId>
-  <name>JBossJTA jta module</name>
-  <description>jta</description>
+  <name>Narayana: ArjunaJTA jta</name>
+  <description>Narayana: ArjunaJTA jta</description>
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>classes</sourceDirectory>
