--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -20,9 +20,9 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>narayana-jts-jacorb</artifactId>
-  <name>JBossJTS packaged module</name>
+  <name>Narayana: ArjuntaJTS narayana-jts-jacorb</name>
   <packaging>jar</packaging>
-  <description>jts uber</description>
+  <description>JTS uber jar with jacorb stubs</description>
   <build>
     <plugins>
       <plugin>
