--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -20,7 +20,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>orbportability</artifactId>
-  <name>JBossJTS orb portability</name>
+  <name>Narayana: ArjunaJTS orbportability</name>
   <description>orb portability harness</description>
   <packaging>jar</packaging>
   <build>
