--- a/XTS/WS-C/pom.xml
+++ b/XTS/WS-C/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ws-c11</artifactId>
   <packaging>jar</packaging>
-  <name>wsc11</name>
-  <description>wsc11</description>
+  <name>Narayana: XTS WS-C</name>
+  <description>Narayana: XTS WS-C (wsc11)</description>
   <build>
     <sourceDirectory>dev/src</sourceDirectory>
     <resources>
