--- a/XTS/WSAS/pom.xml
+++ b/XTS/WSAS/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>wsas</artifactId>
   <packaging>jar</packaging>
-  <name>wsas</name>
-  <description>wsas</description>
+  <name>Narayana: XTS WSAS</name>
+  <description>Narayana: XTS WSAS</description>
   <build>
     <sourceDirectory>classes</sourceDirectory>
   </build>
