--- a/XTS/WSTX/pom.xml
+++ b/XTS/WSTX/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>wstx11</artifactId>
   <packaging>jar</packaging>
-  <name>wstx11</name>
-  <description>wstx11</description>
+  <name>Narayana: XTS WSTX</name>
+  <description>Narayana: XTS WSTX (wstx11)</description>
   <build>
     <sourceDirectory>classes</sourceDirectory>
     <plugins>
