--- a/XTS/bridge/pom.xml
+++ b/XTS/bridge/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>bridge</artifactId>
   <packaging>jar</packaging>
-  <name>xts bridge</name>
-  <description>xts bridge</description>
+  <name>Narayana: XTS bridge</name>
+  <description>Narayana: XTS bridge</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
