--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jbossxts</artifactId>
   <packaging>jar</packaging>
-  <name>${project.artifactId}</name>
-  <description>${project.artifactId}</description>
+  <name>Narayana: XTS jbossxts</name>
+  <description>Narayana: XTS jbossxts</description>
   <build>
     <plugins>
       <plugin>
