--- a/XTS/localjunit/WSTFSC07-interop/pom.xml
+++ b/XTS/localjunit/WSTFSC07-interop/pom.xml
@@ -14,6 +14,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>wstf-sc007-interop</artifactId>
 	<packaging>jar</packaging>
-	<name>wstf-sc007-interop</name>
+	<name>Narayana: XTS WSTFSC07-interop</name>
 	<description>JBoss Transactions WS-Addressing interop test</description>
 </project>
