--- a/XTS/localjunit/WSTX11-interop/pom.xml
+++ b/XTS/localjunit/WSTX11-interop/pom.xml
@@ -14,6 +14,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>wstx11-interop</artifactId>
 	<packaging>jar</packaging>
-	<name>wstx11-interop</name>
+	<name>Narayana: XTS WSTX11-interop</name>
 	<description>JBoss Transactions WS-Addressing interop test</description>
 </project>
