--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>localjunit</artifactId>
     <packaging>pom</packaging>
-    <name>localjunit tests for xts</name>
+    <name>Narayana: XTS localjunit</name>
     <description>localjunit tests for xts</description>
     <properties>
         <buildType>11</buildType>
