--- a/XTS/recovery/pom.xml
+++ b/XTS/recovery/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>recovery</artifactId>
   <packaging>jar</packaging>
-  <name>xts recovery</name>
-  <description>xts recovery</description>
+  <name>Narayana: XTS recovery</name>
+  <description>Narayana: XTS recovery</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
   </build>
