--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>narayana-full</artifactId>
   <packaging>pom</packaging>
-  <name>${project.artifactId}</name>
-  <description>${project.artifactId}</description>
+  <name>Narayana: narayana-full</name>
+  <description>Narayana: narayana-full</description>
   
   <properties>
     <skip.from.idlj>**</skip.from.idlj>
