--- a/rest-tx/tx/pom.xml
+++ b/rest-tx/tx/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>restat-api</artifactId>
   <packaging>jar</packaging>
-  <name>RESTful API for Atomic Transactions</name>
+  <name>Narayana: rest-tx tx (RESTful API for Atomic Transactions)</name>
   <description>Provides Transactions for web applications</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
