--- a/rest-tx/util/pom.xml
+++ b/rest-tx/util/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>restat-util</artifactId>
   <packaging>jar</packaging>
-  <name>Support utils for using the REST-AT</name>
+  <name>Narayana: rest-tx util</name>
   <description>Provides Utility methods to support RESTAT</description>
 
   <repositories>
