--- a/pom.xml
+++ b/pom.xml
@@ -505,6 +505,14 @@
             <build>
                 <plugins>
                     <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-jar-plugin</artifactId>
+                      <version>2.3.2</version>
+                      <configuration>
+                        <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
+                      </configuration>
+                    </plugin>
+                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>emma-maven-plugin</artifactId>
                         <version>1.0-alpha-3</version>
@@ -524,13 +532,6 @@
                                 <version>2.0.12224-adinn</version>
                             </dependency>
                         </dependencies>
-                    </plugin>
-                    <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-surefire-plugin</artifactId>
-                      <configuration>
-                        <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>    
-                      </configuration>
                     </plugin>
                     <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
