--- a/ext/pom.xml
+++ b/ext/pom.xml
@@ -24,4 +24,33 @@
     <packaging>pom</packaging>
     <name>Narayana: ext</name>
     <description>Narayana: Ext All</description>
+    <profiles>
+        <profile>
+            <id>codeCoverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-install-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-patched-emma</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>install-file</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${basedir}/emma.jar</file>
+                                    <groupId>emma</groupId>
+                                    <artifactId>emma</artifactId>
+                                    <version>2.0.12224-adinn</version>
+                                    <packaging>jar</packaging>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
