--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -224,6 +224,40 @@
   </dependencies>
   <profiles>
     <profile>
+      <id>codeCoverage</id>
+      <build>
+        <plugins>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+              <artifactSet>
+                <includes combine.children="append">
+                  <include>emma:emma</include>
+                </includes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
+        </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>emma</groupId>
+          <artifactId>emma</artifactId>
+          <version>2.0.12224-adinn</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
         <id>release</id>
         <build>
           <plugins>
