--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -305,7 +305,7 @@
         <dependency>
           <groupId>emma</groupId>
           <artifactId>emma</artifactId>
-          <version>2.0.12224-adinn</version>
+          <version>${version.emma}</version>
         </dependency>
       </dependencies>
     </profile>
