--- a/ext/pom.xml
+++ b/ext/pom.xml
@@ -43,7 +43,7 @@
                                     <file>${basedir}/emma.jar</file>
                                     <groupId>emma</groupId>
                                     <artifactId>emma</artifactId>
-                                    <version>2.0.12224-adinn</version>
+                                    <version>${version.emma}</version>
                                     <packaging>jar</packaging>
                                 </configuration>
                             </execution>
