JBTM-1776 Updated to ignore the generated orb classes

--- a/pom.xml
+++ b/pom.xml
@@ -534,6 +534,8 @@
                             <target>
                                   <java classname="emma">
                                     <arg value="instr"/>
+                                    <arg value="-ix"/>
+                                    <arg value="-com.arjuna.ArjunaOTS.*,-org.omg.CORBA.*,-org.omg.CosTransactions.*,-org.omg.XA.*"/>
                                     <arg value="-instrpath"/>
                                     <arg value="${project.build.directory}/classes/"/>
                                     <arg value="-outfile"/>
